<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/top1"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    tools:context="app.stop.start.com.startandstop.fragments.StatisticsFragmentTotalTime">

    <LinearLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnDay"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#395563"
            android:text="@string/statDay"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:background="#395563"
            android:text="@string/statMonth"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/grid" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        ads:adUnitId="@string/banner_code"
        ads:adSize="BANNER"/>

</RelativeLayout>
